# Inference-Gpu

./: README.md
backend-inference-server/: CMakeLists.txt
backend-inference-server/model/: Conversion.py  ModelLoader.cpp  ModelLoader.h  model_architecture.py
